# DRAMPower

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  ChangeLog  DRAMPowerCli  DebugFile.txt  Makefile  PowerCalc.cc  README  README.md  cmake_install.cmake  common.mk  valgrind-out.txt  vcpkg-configuration.json  vcpkg.json
lib/cli11/: CMakeLists.txt
lib/cli11/include/cli11/: CLI11.hpp
src/DRAMPower/: CMakeLists.txt
src/DRAMPower/DRAMPower/: Exceptions.h  Types.h
src/DRAMPower/DRAMPower/command/: CmdType.cpp  CmdType.h  Command.cpp  Command.h  Pattern.cpp  Pattern.h
src/DRAMPower/DRAMPower/data/: energy.cpp  energy.h  stats.h
src/DRAMPower/DRAMPower/dram/: Bank.h  DRAM.cpp  Interface.cpp  Interface.h  PseudoChannel.cpp  PseudoChannel.h  Rank.cpp  Rank.h  dram_base.h
src/DRAMPower/DRAMPower/memspec/: MemSpec.cpp  MemSpec.h  MemSpecDDR4.cpp  MemSpecDDR4.h  MemSpecDDR5.cpp  MemSpecDDR5.h  MemSpecHBM2.cpp  MemSpecHBM2.h  MemSpecLPDDR4.cpp  MemSpecLPDDR4.h  MemSpecLPDDR5.cpp  MemSpecLPDDR5.h  MemSpecLPDDR6.cpp  MemSpecLPDDR6.h
src/DRAMPower/DRAMPower/simconfig/: simconfig.h
src/DRAMPower/DRAMPower/standards/: test_accessor.h
src/DRAMPower/DRAMPower/util/: CoreWrapper.h  Deserialize.h  ImplicitCommandHandler.cpp  ImplicitCommandHandler.h  PatternHandler.h  RegisterHelper.h  Router.h  Serialize.h  adl_serializer.h  binary_ops.cpp  binary_ops.h  burst_storage.h  bus.h  bus_extensions.h  bus_types.h  cli_architecture_config.h  clock.h  command_counter.h  cycle_stats.h  databus.h  databus_extensions.h  databus_helpermacros.h  databus_presets.h  databus_types.h  dbi.cpp  dbi.h  dbialgos.h  dbihelpers.h  dbitypes.h  dynamic_bitset.cpp  dynamic_bitset.h  extension_base.h  extension_manager.h  extension_manager_static.h  extensions.cpp  extensions.h  implicitCommandHelpers.h  json.h  pending_stats.cpp  pending_stats.h  (+5 more)
src/cli/: CMakeLists.txt  CliHandler.cc  CliHandler.cc.autosave  CliHandler.h  TraceParser.cc  TraceParser.h  config.h  drampower.cc  drampower_cli.cc  main.cpp  util.cpp  util.hpp  validators.cpp  validators.h
src/cli/common/: version.h
src/cli/common/jsonparser/: JSONExceptions.h  JSONParser.cc  JSONParser.h
src/cli/lib/: CMakeLists.txt
src/cli/main/: CMakeLists.txt  main.cpp  validators.cpp
tests/: CMakeLists.txt
tests/tests_drampower/: CMakeLists.txt
tests/tests_drampower/base/: test_ddr_base.cpp  test_ddr_data.cpp  test_ddr_serialize.cpp  test_pattern_pre_cycles.cpp
tests/tests_drampower/core/DDR4/: ddr4_multidevice_tests.cpp  ddr4_multirank_tests.cpp  ddr4_test_pattern_0.cpp  ddr4_test_pattern_1.cpp  ddr4_test_pattern_10.cpp  ddr4_test_pattern_11.cpp  ddr4_test_pattern_12.cpp  ddr4_test_pattern_13.cpp  ddr4_test_pattern_14.cpp  ddr4_test_pattern_15.cpp  ddr4_test_pattern_2.cpp  ddr4_test_pattern_3.cpp  ddr4_test_pattern_4.cpp  ddr4_test_pattern_5.cpp  ddr4_test_pattern_6.cpp  ddr4_test_pattern_7.cpp  ddr4_test_pattern_8.cpp  ddr4_test_pattern_9.cpp  ddr4_test_time_offset.cpp
tests/tests_drampower/core/DDR5/: ddr5_multidevice_tests.cpp  ddr5_multirank_tests.cpp  ddr5_test_pattern_0.cpp  ddr5_test_pattern_1.cpp  ddr5_test_pattern_10.cpp  ddr5_test_pattern_11.cpp  ddr5_test_pattern_12.cpp  ddr5_test_pattern_13.cpp  ddr5_test_pattern_14.cpp  ddr5_test_pattern_15.cpp  ddr5_test_pattern_16.cpp  ddr5_test_pattern_17.cpp  ddr5_test_pattern_18.cpp  ddr5_test_pattern_2.cpp  ddr5_test_pattern_3.cpp  ddr5_test_pattern_4.cpp  ddr5_test_pattern_5.cpp  ddr5_test_pattern_6.cpp  ddr5_test_pattern_7.cpp  ddr5_test_pattern_8.cpp  ddr5_test_pattern_9.cpp  ddr5_test_time_offset.cpp
tests/tests_drampower/core/HBM2/: hbm2_test_pattern_0.cpp
tests/tests_drampower/core/LPDDR4/: lpddr4_multidevice_tests.cpp  lpddr4_multirank_test.cpp  lpddr4_multirank_tests.cpp  lpddr4_test_pattern_0.cpp  lpddr4_test_pattern_1.cpp  lpddr4_test_pattern_10.cpp  lpddr4_test_pattern_11.cpp  lpddr4_test_pattern_12.cpp  lpddr4_test_pattern_13.cpp  lpddr4_test_pattern_14.cpp  lpddr4_test_pattern_15.cpp  lpddr4_test_pattern_16.cpp  lpddr4_test_pattern_17.cpp  lpddr4_test_pattern_18.cpp  lpddr4_test_pattern_2.cpp  lpddr4_test_pattern_3.cpp  lpddr4_test_pattern_4.cpp  lpddr4_test_pattern_5.cpp  lpddr4_test_pattern_6.cpp  lpddr4_test_pattern_7.cpp  lpddr4_test_pattern_8.cpp  lpddr4_test_pattern_9.cpp  lpddr4_test_time_offset.cpp
tests/tests_drampower/core/LPDDR5/: LPDDR5_test_pattern_12.cpp  LPDDR5_test_pattern_13.cpp  LPDDR5_test_pattern_14.cpp  LPDDR5_test_pattern_15.cpp  LPDDR5_test_pattern_16.cpp  LPDDR5_test_pattern_17.cpp  LPDDR5_test_pattern_18.cpp  LPDDR5_test_pattern_19.cpp  LPDDR5_test_pattern_20.cpp  LPDDR5_test_pattern_21.cpp  lpddr5_multidevice_tests.cpp  lpddr5_multirank_test.cpp  lpddr5_multirank_tests.cpp  lpddr5_test_pattern_0.cpp  lpddr5_test_pattern_1.cpp  lpddr5_test_pattern_10.cpp  lpddr5_test_pattern_11.cpp  lpddr5_test_pattern_12.cpp  lpddr5_test_pattern_13.cpp  lpddr5_test_pattern_14.cpp  lpddr5_test_pattern_15.cpp  lpddr5_test_pattern_16.cpp  lpddr5_test_pattern_17.cpp  lpddr5_test_pattern_18.cpp  lpddr5_test_pattern_19.cpp  lpddr5_test_pattern_2.cpp  (+10 more)
tests/tests_drampower/interface/: test_dbi_ddr4.cpp  test_dbi_ddr5.cpp  test_dbi_hbm2.cpp  test_dbi_lpddr4.cpp  test_dbi_lpddr5.cpp  test_dbi_lpddr6.cpp  test_interface_ddr4.cpp  test_interface_ddr5.cpp  test_interface_lpddr4.cpp  test_interface_lpddr5.cpp  test_time_offset_ddr4.cpp  test_time_offset_ddr5.cpp  test_time_offset_lpddr4.cpp  test_time_offset_lpddr5.cpp  test_time_offset_lpddr6.cpp  test_togglingrate.cpp  test_togglingrate_ddr4.cpp  test_togglingrate_ddr5.cpp  test_togglingrate_lpddr4.cpp  test_togglingrate_lpddr5.cpp
tests/tests_drampower/resources/: cliconfig.json  ddr4.csv  ddr4.json  ddr5.json  hbm2.json  lpddr4.csv  lpddr4.json  lpddr5.json  lpddr6.csv  lpddr6.json
tests/tests_misc/: CMakeLists.txt  test_bus.cpp  test_bus_extended.cpp  test_clock.cpp  test_dynamic_bitset.cpp  test_dynamic_extension_manager.cpp  test_interval.cpp  test_misc.cpp  test_pattern.cpp  test_pin.cpp  test_static_extension_manager.cpp
(+264 files in other folders)
